[gd_scene load_steps=6 format=3 uid="uid://dws6q4wcm8i0w"]

[ext_resource type="Script" path="res://scene/level/oil-rig/fish_pump.gd" id="1_oiohw"]
[ext_resource type="PackedScene" uid="uid://cvujptp313j0g" path="res://scene/rope/rope.tscn" id="2_bf4on"]
[ext_resource type="Texture2D" uid="uid://nwl6dcy1ruwd" path="res://scene/level/oil-rig/asset/suction_pipe.png" id="3_6vy0s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e85ke"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eqg7q"]

[node name="FishPump" type="Node2D" node_paths=PackedStringArray("_rope")]
script = ExtResource("1_oiohw")
_rope = NodePath("Rope")

[node name="Rope" parent="." instance=ExtResource("2_bf4on")]
texture_repeat = 2
width = 15.0
texture = ExtResource("3_6vy0s")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
_constrain = 3.0

[node name="SuctionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="SuctionCollision" type="CollisionShape2D" parent="SuctionArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_e85ke")

[node name="PipeEnd" type="CharacterBody2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeEnd"]
shape = SubResource("CircleShape2D_eqg7q")
